baxter/themes/firefly/css/style.css
/* ... */
footer .navigation li:last-child {
  margin: 0;
}
footer .navigation li:last-child:after {
  content: "\00A0";
  display: none;
}
footer .navigation a {
  white-space: nowrap;
}
footer nav + p {
  text-align: right;
}

#footer-text {
  float: left;
  width: 48%;
}

/* @end */
/* @group ----- Exhibit Builder ----- */
.pagination + .exhibit {
  border-top: 1px solid #eee;
}

#exhibit-pages {
  width: 220px;
  display: inline-block;
}
@media only screen and (min-width: 768px) and (max-width: 959px) {
  #exhibit-pages {
    width: 172px;
  }
}
#exhibit-pages h4 {
  font-family: 'Gill Sans MT', 'Gill Sans', sans-serif;
  font-weight: normal;
  text-transform: uppercase;
}
#exhibit-pages a {
  text-decoration: none;
}
#exhibit-pages > ul {
  margin-left: 0;
  border-top-width: 0.08333em;
  border-top-style: solid;
  padding-top: 1.41667em;
  border-color: #eee;
  padding-left: 0;
  list-style-type: none;
}
#exhibit-pages > ul > li {
  border-bottom-width: 0.08333em;
  border-bottom-style: solid;
  padding-bottom: 1.41667em;
  border-color: #eee;
  margin-bottom: 1.5em;
}
#exhibit-pages ul li > ul {
  padding-left: 1.5em;
  margin-left: 0;
}
#exhibit-pages ul li > ul li {
  text-indent: -1.5em;
}
#exhibit-pages ul li > ul li:before {
  content: "\2014";
}
#exhibit-pages li {
  list-style-type: none;
  margin-left: 0;
}
#exhibit-pages .current {
  font-weight: bold;
}
#exhibit-pages .current > *:not(a) {
  font-weight: normal;
}
#exhibit-pages > ul > li:not(.parent) ul {
  display: none;
}
#exhibit-pages > ul > li.current ul {
  display: block;
}

#exhibit-pages ul ul {
  margin: 0;
}

.exhibits #content > h1:first-of-type,
#exhibit-blocks,
#exhibit-page-navigation,
.exhibits.summary #primary {
  float: left;
  display: inline;
  margin-left: 10px;
  margin-right: 10px;
  width: 700px;
  margin-left: 0;
  padding-right: 20px;
  margin-left: 0;
}
@media only screen and (max-width: 767px) {
  .exhibits #content > h1:first-of-type,
  #exhibit-blocks,
  #exhibit-page-navigation,
  .exhibits.summary #primary {
    margin: 0;
  }
}
@media only screen and (min-width: 768px) and (max-width: 959px) {
  .exhibits #content > h1:first-of-type,
  #exhibit-blocks,
  #exhibit-page-navigation,
  .exhibits.summary #primary {
    width: 556px;
  }
}
@media only screen and (max-width: 767px) {
  .exhibits #content > h1:first-of-type,
  #exhibit-blocks,
  #exhibit-page-navigation,
  .exhibits.summary #primary {
    width: 300px;
  }
}
@media only screen and (min-width: 480px) and (max-width: 767px) {
  .exhibits #content > h1:first-of-type,
  #exhibit-blocks,
  #exhibit-page-navigation,
  .exhibits.summary #primary {
    width: 420px;
  }
}

.exhibit-page-nav a:hover,
.exhibit-page-nav a:active,
.exhibit-page-nav .current a {
  background: #ff8000;
}

.exhibit-pagination .next a {
  float: right;
  text-align: right;
}

#exhibit-page-navigation {
  clear: none;
  margin: 3em 0 1.5em;
}

.exhibit .description,
.exhibit .description ~ * {
  float: left;
  display: inline;
  margin-left: 10px;
  margin-right: 10px;
  width: 520px;
}
@media only screen and (max-width: 767px) {
  .exhibit .description,
  .exhibit .description ~ * {
    margin: 0;
  }
}
@media only screen and (min-width: 768px) and (max-width: 959px) {
  .exhibit .description,
  .exhibit .description ~ * {
    width: 412px;
  }
}
@media only screen and (max-width: 767px) {
  .exhibit .description,
  .exhibit .description ~ * {
    width: 300px;
  }
}
@media only screen and (min-width: 480px) and (max-width: 767px) {
  .exhibit .description,
  .exhibit .description ~ * {
    width: 420px;
  }
}
.exhibit .description p:first-of-type,
.exhibit .description ~ * p:first-of-type {
  margin-top: 0.75em;
}

.exhibit .description ~ * {
  display: block;
  margin: 1.5em auto;
  padding: 0 40px 0 80px;
  float: none;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}

.exhibit-items .download-file:last-child {
  margin-bottom: 1.5em;
}

/* @end */
/* @group ----- Other plugin styles ----- */
#collection-tree {
  margin-left: auto;
  margin-right: auto;
}

#recaptcha_area input {
  display: inline;
}

/* @end */







/* EMLO SPECIFIC */







/* General */

h1, h2, h3 {
		color: #35495E;
		font-family: "adelle",serif !important;
}

h1 { 
    text-transform: none;
}

/* Specifics */


#header-wrap {
	background-color: #EFC319;
    font-family: "adelle",serif;
    font-size: 1.3em;
    color: #35495E;
}

#header-wrap  a {
color: #35495E;
}

header {
	padding: 1em 0;
}
header[role=banner] {
    padding:0;
}

/* nav and search */

#query {
	border-radius: 30px;
	padding: 50px;
}

#search-container button {
	right: auto;
	left: 0;
}

#search-container input[type="text"] {
  padding: 3px 3px 3px 65px;
	border-radius: 30px;
}
#search-container button#submit_search {
	border-radius: 30px 0 0 30px;
}
#search-container.with-advanced .button {
	right: auto;
	left: 30px;
}

#search-container button {
    background: url("http://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png") no-repeat scroll 9px
}
#search-container button::after {
    display:none;
}

#primary-nav a {
	background-color: #EFC319;
}

#primary-nav .nav-item > a {
	border-color: transparent;
  font-weight: bold;
}

#primary-nav a:hover, #primary-nav a:focus, #primary-nav li.active a {
	color: white;
}
#primary-nav .nav-item:first-child > a {
	border-left: none;
}
#search-container,
#primary-nav {
    display: inline-block;
}
#search-container {
    width: 25%;
    margin-top: 6px;
}
#primary-nav {
     width: auto;
    margin-left: 160px; /* avoid logo */
}

/* logo and title */

#logo a {
    float:left;
    margin-top: -78px;
    margin-left: -20px;
    padding: 0px 15px;
}
#logo .text {
    display:none;
}

header .text {
    margin-left: 245px;
    color: #172854;
}
header .text p {
    font-size: 16px;
    line-height: 1.5;
    color: #222;
}
/* ... */

